--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
     kapt 'com.google.dagger:hilt-android-compiler:2.42'
+    kapt 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.9.0'
